# parsel_text

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml  tests.yml
parsel_get_selector_text/: __init__.py
parsel_text/: __init__.py
tests/: conftest.py  test_fixtures.py  test_internal.py  test_known_bugs.py  test_public_api.py  test_regressions.py
tests/fixtures/: data_table.html  encoding.html  messy.html  news.html  product.html  svg.html  whitespace.html
