[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[options]
package_dir = "parsel_get_selector_text"
packages = ["parsel_get_selector_text"]

[project]
name = "parsel_get_selector_text"
version = "0.7"
authors = [
    {name = "Carlos A. Planchón", email = "carlosandresplanchonprestes@gmail.com"}
]
description = "Extracts all text results from an XPath query on a parsel Selector object."
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]
license = {text = "MIT License"}
keywords = ["dom", "parsel", "scraping", "xpath"]
readme = "README.md"
dependencies=[
    "ftfy",
    "parsel",
    "beautifulsoup4"
]

[project.urls]
repository = "https://github.com/carlosplanchon/parsel_get_selector_text.git"
