[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parsel_text"
version = "2.0.2"
authors = [
    {name = "Carlos A. Planchón", email = "carlosandresplanchonprestes@gmail.com"}
]
description = "Extracts all text results from an XPath query on a parsel Selector object."
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]

license = "MIT"
license-files = ["LICENSE"]

requires-python = ">=3.10"

keywords = ["dom", "parsel", "scraping", "xpath"]
readme = "README.md"
dependencies=[
    "ftfy",
    "parsel"
]

[project.optional-dependencies]
bs4 = ["beautifulsoup4"]

[project.urls]
Repository = "https://github.com/carlosplanchon/parsel_text.git"

[tool.setuptools]
packages = ["parsel_text"]

[dependency-groups]
dev = ["pytest>=8", "beautifulsoup4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
xfail_strict = true
